# ROSLine

./: README.md
.githooks/: pre-commit
.github/workflows/: python.yml
ros-line-whatsapp-qr/: .gitignore  README.md  package-lock.json  package.json
ros-line-whatsapp-qr/src/: chat_cli.ts  whatsapp_handler.ts
ros_line/: package.xml  setup.cfg  setup.py
ros_line/launch/: ros_agent.launch.py
ros_line/resource/: .env.example
ros_line/ros_line/: __init__.py  main.py
ros_line/ros_line/endpoints/: __init__.py  business_webservice.py  chat_webservice.py
ros_line/ros_line/endpoints/actions/: __init__.py  agent.py
ros_line/ros_line/endpoints/chat/: __init__.py  context.py  handlers.py  parsing.py  prompts.py  vision.py
ros_line/ros_line/endpoints/dto/: __init__.py  message_dto.py
